Added Saved event to the BusinessObject class. Allowed for a null collection being passed into the CreateDisplayValueDictionary method of BusinessObjectLookupList. Fixed variable naming in TestLookupComboBoxMapper. Refactored the internal code of BoTabColControl into CollectionTabControlMapper. Adapted the CollectionTabControlMapper class to be more flexible (most methods are now virtual). Fixed the name of the NameSpace of the ComboBoxRightClickController class to be Habanero.UI.Forms. Added a 'showUpDown' property to the DateTimePickerMapper and the DateTimePickerNullableMapper. Added DelegatedObjectEditor and DelegatedObjectInitialiser classes. Adapted LookupComboBoxMapper class to be able to handle enum property types.

--- a/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="Forms\CheckBoxMapper.cs" />
     <Compile Include="Forms\CollectionComboBoxMapper.cs" />
+    <Compile Include="Forms\CollectionTabControlMapper.cs" />
     <Compile Include="Forms\ComboBoxCollectionControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -74,6 +75,8 @@
     <Compile Include="Forms\DefaultBOEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\DelegatedObjectEditor.cs" />
+    <Compile Include="Forms\DelegatedObjectInitialiser.cs" />
     <Compile Include="Forms\EditableGridButtonControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
