Added new Error Types BusObjEditableException BusObjDeletableException Added Error checking in BeginEdits for IsEditable Added Error Checking in Delete for IsDeletable. Added utilities to DateTimeUtilities. Added AppendMessage to StringUtilities.

--- a/source/Habanero.Util/Habanero.Util.csproj
+++ b/source/Habanero.Util/Habanero.Util.csproj
@@ -97,6 +97,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
