--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -336,7 +336,7 @@
     <Compile Include="SqlGeneration\DeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\InsertStatementGenerator.cs" />
     <Compile Include="SqlGeneration\SelectStatementGenerator.cs" />
-    <Compile Include="SqlGeneration\SqlGenerationHelper.cs" />
+    <Compile Include="SqlGeneration\SqlFormattingHelper.cs" />
     <Compile Include="SqlGeneration\UpdateStatementGenerator.cs" />
     <Compile Include="SupportsAutoIncrementingFieldBO.cs" />
     <Compile Include="Transaction.cs">
