Refactored the use of IParameterSqlInfo and IExpression. Added feature to BusinessObjectCollection where it can load a collection by criteria on related objects. Overloaded CountOccurences method in StringUtilities that counts the number of times a character occurs in a string. Modified CountOccurences method in StringUtilities to be more efficient. Added accessor methods on Expression for LeftExpression, RightExpression and SqlOperator. Moved SqlFormattingHelper to Habanero.Db. Fixed problems in Habanero.WebGUI project and the corresponding test project.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Comparer\StringComparer.cs" />
     <Compile Include="Comparer\TimeSpanComparer.cs" />
     <Compile Include="BOKeyEventArgs.cs" />
+    <Compile Include="CriteriaManager\PropDefParameterSQLInfo.cs" />
     <Compile Include="CriteriaManager\SQLCriteriaCreator.cs" />
     <Compile Include="DeleteHelper.cs" />
     <Compile Include="IBusinessObjectCollection.cs" />
@@ -336,7 +337,6 @@
     <Compile Include="SqlGeneration\DeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\InsertStatementGenerator.cs" />
     <Compile Include="SqlGeneration\SelectStatementGenerator.cs" />
-    <Compile Include="SqlGeneration\SqlFormattingHelper.cs" />
     <Compile Include="SqlGeneration\UpdateStatementGenerator.cs" />
     <Compile Include="SupportsAutoIncrementingFieldBO.cs" />
     <Compile Include="Transaction.cs">
