Some refactoring to with AutoIncrementing Fixed ClassDef cloning, included DisplayName and TableName Added a Persistable property to PropDef. Added tests to test and implement this function (non Persistable PropDefs). This affected InsertStatementGenerator, UpdateStatementGenerator, SelectStatementGenerator). This will be changed again, as this is a temp solution to get our tests working.

--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -187,6 +187,7 @@
     <Compile Include="TestInheritanceSingleTable.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestNonPersistablePropDefs.cs" />
     <Compile Include="TestOneToOneRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
