--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Comparer\TestComparers.cs" />
     <Compile Include="ContactPersonTestBO.cs" />
     <Compile Include="CriteriaManager\TestSqlCriteriaCreator.cs" />
+    <Compile Include="SqlGeneration\StatementGeneratorTestHelper.cs" />
     <Compile Include="TestMultipleRelationship.cs" />
     <Compile Include="TestRelatedBusinessObjectCollection.cs" />
     <Compile Include="Loaders\TestXmlTriggerLoader.cs" />
