BOKey: Improved BOKey to allow easy loading using ID which contains guids BOLoader: Refresh now calls AfterLoad on the BusinessObject once it's refreshed (added a test for this) BusinessObject: Refactored UpdateAfterSave, now called UpdateStateAsPersisted. Marked SQL methods as obsolete - they will be removed soon. BusinessObjectCollection: Fixed FindByGuid which broke due to changes in the BOKey MultipleRelationship: Added DeleteParentAction prop which reads the RelationshipDef TestTransaction: Added tests that found bugs in Cascading delete. This caused a wholesale rewrite of the transaction system and database layer. TestDeletion: Added referential integrity to the database which caused TestCascadeDelete to fail which caused a wholesale rewrite of the transaction system and database layer Added new TransactionCommitter and tests intended to replace the database layer.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -91,6 +91,7 @@
     <Compile Include="HabaneroApp.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
+    <Compile Include="ITransactional.cs" />
     <Compile Include="ITransactionCommitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
