BOKey: Changed MustCheckKey to IsDirtyOrNew BOLoader: Changed to always refresh a BO when loading it. Added a ClearLoadedBusinessObjects method. BOPrimaryKey: refactored GetOrigObjectID. BOPropCol: made Add public BusinessObject: removed all code related to persisting the object to the database. It's all handled through TransactionCommitter now. Added Checking for duplicates and an UpdateObjectBeforePersisting method to replace BeforeSave Commented out INumberGenerator and DatabaseNumberGenerator temporarily - to be replaced Removed ITransaction, ITransactionCommitter and Transaction. Repaired all tests to use new TransactionCommitter where necessary. Concurrency tests were set to ignored, and the TransactionLog test, as these are not implemented in the new TransactionCommitter yet.  AfterSave has been removed, to be implemented when required.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -216,7 +216,7 @@
     <Compile Include="TestSingleRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TestTransaction.cs" />
+    <Compile Include="TestTransactionCommitterHelper.cs" />
     <Compile Include="TestUnrefRelationshipDef.cs" />
   </ItemGroup>
   <ItemGroup>
