ObjectCreator abstract class created. IObjectEditor generic created IObjectInitialiser generic created BOLoader modified to error for refreshing a deleted object to throw BusObjDeleteConcurrencyControlException BusinessObject added UpdateAsTransactionRolledBack Updated TransactionalBusinessObject to deal with IConcurrencyControl Moved Database logic from TransactionalBusinessObject to TransactionalBusinessObjectDB TransactionCommitter updated to implement RollBackExecuted on TransactionalBusinessObject

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -154,6 +154,7 @@
     <Compile Include="CriteriaManager\TestSqlCriteriaCreator.cs" />
     <Compile Include="OrganisationTestBO.cs" />
     <Compile Include="SqlGeneration\StatementGeneratorTestHelper.cs" />
+    <Compile Include="TestConcurrencyControl_OptimisticLockingVersionNumberDB.cs" />
     <Compile Include="TestTransactionCommitter.cs" />
     <Compile Include="TestMultipleRelationship.cs" />
     <Compile Include="TestRelatedBusinessObjectCollection.cs" />
