--- a/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
+++ b/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
@@ -31,10 +31,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Gizmox.WebGUI.Common, Version=2.0.5701.0, Culture=neutral, PublicKeyToken=263fa4ef694acff6, processorArchitecture=MSIL">
-      <HintPath>..\..\lib\Gizmox.WebGUI.Common.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Brett\Gizmox.WebGUI\Gizmox.WebGUI.SDK.Sources.6.0.1_NET20\Gizmox.WebGUI.Assemblies\bin\2.0\Gizmox.WebGUI.Common.dll</HintPath>
     </Reference>
     <Reference Include="Gizmox.WebGUI.Forms, Version=2.0.5701.0, Culture=neutral, PublicKeyToken=c508b41386c60f1d, processorArchitecture=MSIL">
-      <HintPath>..\..\lib\Gizmox.WebGUI.Forms.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Brett\Gizmox.WebGUI\Gizmox.WebGUI.SDK.Sources.6.0.1_NET20\Gizmox.WebGUI.Forms\bin\Debug\Gizmox.WebGUI.Forms.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.0.30714, Culture=neutral, PublicKeyToken=b32731d11ce58905">
       <SpecificVersion>False</SpecificVersion>
@@ -53,6 +55,7 @@
     <Compile Include="TestCheckBoxMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLookupComboBoxMapper.cs" />
+    <Compile Include="TestReadonlyGridWithButtons.cs" />
     <Compile Include="TestTextBoxMapper.cs" />
   </ItemGroup>
   <ItemGroup>
