--- a/source/Habanero.UI/Habanero.UI.csproj
+++ b/source/Habanero.UI/Habanero.UI.csproj
@@ -170,6 +170,7 @@
     </Compile>
     <Compile Include="Grid\FilterControlEventArgs.cs" />
     <Compile Include="Grid\FilterInputBoxCollection.cs" />
+    <Compile Include="Grid\GridSelectionController.cs" />
     <Compile Include="Grid\ReadOnlyGrid.cs">
       <SubType>Component</SubType>
     </Compile>
