--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -218,7 +218,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TestTransactionCommitterHelper.cs" />
+    <Compile Include="TestTransactionLogger.cs" />
     <Compile Include="TestUnrefRelationshipDef.cs" />
+    <Compile Include="TransactionLogBusObj.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
