Added Concurrency Control Optimistic, Pessimistic Added Number Generator with two strategies (w locking and w out locking) Added Transaction LOcking Created ITransactional and ITransactionDB interfaces for adding non business objects to a transaction committer

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -90,7 +90,11 @@
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
+    <Compile Include="IConcurrencyControl.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
+    <Compile Include="ITransactional.cs" />
+    <Compile Include="ITransactionalDB.cs" />
+    <Compile Include="ITransactionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
