--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -31,13 +31,21 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilterControlWin.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ListBoxWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ListBoxWin.Designer.cs">
+      <DependentUpon>ListBoxWin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MultiSelectorWin.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="TextBoxWin.cs">
       <SubType>Component</SubType>
