--- a/source/Habanero.UI.Gizmox/Habanero.UI.Gizmox.csproj
+++ b/source/Habanero.UI.Gizmox/Habanero.UI.Gizmox.csproj
@@ -43,7 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GizmoxControlFactory.cs" />
+    <Compile Include="ButtonGiz.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="GizmoxControlFactory.cs">
+    </Compile>
     <Compile Include="ListBoxGiz.cs">
       <SubType>Component</SubType>
     </Compile>
