Finished off the MultiSelector including creating Win and Giz controls.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FilterControl\IFilterControl.cs" />
     <Compile Include="IListBox.cs" />
     <Compile Include="IListBoxObjectCollection.cs" />
+    <Compile Include="IListBoxSelectedObjectCollection.cs" />
     <Compile Include="IMultiSelector.cs" />
     <Compile Include="ITextBox.cs" />
     <Compile Include="MultiSelectorManager.cs" />
