Added code to remove miscelaneous objects (created during loading) from objectManager BOProp Added error check to ensure that a GUID being stored in a fields that is of type string is stored correctly MultipleRelationshipDef added an enumerated type to do nothing on delete. This will either cause the system to depend on the databases delete mechanism or for the developer to handle the deleting of related objects manually or if there is more than one relationship between the objects that only the one allows deleting. FilterControlManager (UI.Base) added check box capabilities to the FilterControlMngr. Habanero.WebGUI/GridBase.cs Implemented our own getSelectedRows due to a bug in the Gizmox DataGridView. Implemented a SetBusinessObject programmattically in ReadOnlyGrid due to problems with Gizmox.DataGridView. Commented out the delete confirmation from ReadOnlyGridButtonControl due to the fact that the ConfirmDeletion message is not trully modal in the web environment.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FilterControl\DataViewStringFilterClause.cs" />
     <Compile Include="FilterControl\FilterControlManager.cs" />
     <Compile Include="IButton.cs" />
+    <Compile Include="ICheckBox.cs" />
     <Compile Include="IChilliControl.cs" />
     <Compile Include="IComboBox.cs" />
     <Compile Include="IComboBoxObjectCollection.cs" />
