--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckBoxGiz.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ComboBoxGiz.cs">
       <SubType>Component</SubType>
     </Compile>
