--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -52,6 +52,7 @@
     <Compile Include="TestDataViewFilterClauseFactory.cs" />
     <Compile Include="TestDataViewFilterClauseFactoryWithStrings.cs" />
     <Compile Include="TestFilterControl.cs" />
+    <Compile Include="TestFilterControlCheckBox.cs" />
     <Compile Include="TestListBox.cs" />
     <Compile Include="TestMultiSelector.cs" />
     <Compile Include="TestMultiSelectorModel.cs" />
